=======
Changes
=======

The **signac-dashboard** package follows `semantic versioning <https://semver.org/>`_.

Version 0.6
===========

[0.6.0] -- 2023-xx-xx
---------------------

Added
+++++

- Login page that redirects back to current URL (#160, #181).

Fixed
+++++

- Updated bundled jQuery version to 3.6.4 for a security fix (#184).

[0.5.0] -- 2023-03-30
---------------------

Added
+++++

- Official Python 3.11 support (#176).
- Ability to sort ``ImageViewer`` and ``VideoViewer`` cards (#155).

Changed
+++++++

- Require signac 2.0.0 (#166).
- Default value of ``PER_PAGE`` is now 24 (#168).
- Minor visual updates (#175).
- Switched to a pyproject.toml based build (#176).

Version 0.4
===========

[0.4.0] -- 2022-12-12
---------------------

Added
+++++

- Improve security on multi-user systems. Dashboard now generates a login token when started. Users
  must login with the token to view project and job data in the dashboard (#122, #158).

Changed
+++++++

- ``ImageViewer`` searches for ``*.svg`` files by default (#157).

Fixed
+++++

- Fixed handling of ``--debug`` command line option (#152).
- Addressed deprecation warnings from signac 1.8.0 (#132, #153).

Version 0.3
===========

[0.3.1] -- 2022-10-17
---------------------

Changed
+++++++

- Updated CI to use GitHub Actions (#150).

Fixed
+++++

- Renamed ``cache_timeout`` to ``max_age`` in calls to flask.send_from_directory (#142, #143, #149).

[0.3.0] -- 2022-06-22
---------------------

Added
+++++

- The Project page displays cards from modules with ``context="ProjectContext"`` (#27, #110).
- Schema module for the ProjectContext (#110).
- ProjectContext support for the DocumentList, ImageViewer, TextDisplay, and VideoViewer modules (#110).
- Dashboard config option ``CARDS_PER_ROW`` controls the number of cards per row in the desktop view (#133).
- The endpoint ``views.get_file`` now reads the ``download_name`` request argument (#127).

Changed
+++++++
