@@ -3,6 +3,7 @@ from .document_list import DocumentList
 from .file_list import FileList
 from .flow_status import FlowStatus
 from .image_viewer import ImageViewer
+from .navigator import Navigator
 from .notes import Notes
 from .schema import Schema
 from .statepoint_list import StatepointList
@@ -15,6 +16,7 @@ __all__ = [
     "FileList",
     "FlowStatus",
     "ImageViewer",
+    "Navigator",
     "Notes",
     "Schema",
     "StatepointList",
